src/test/data/psi_tree/valid_contracts/dip.tz
code {
       DIP {
             IF_NONE { PUSH (pair bool bool) (Pair False False) }
                     {}
           };
     }