src/test/data/psi_tree/syntax_errors/toplevel_instruction_tag.tz
code {
       PUSH int (Pair int int)
     }